Sync with trunk to revision 590008.